# sumka

./: .gitignore  Makefile  entry.py  local.yaml  pyproject.toml
bot/: config.yaml  core.py  enums.py  utils.py
bot/db/: base.py  decorators.py  models.py
bot/handlers/: base.py
bot/handlers/admin/: __init__.py  base.py  category.py  global_category.py  mailing.py  town.py
bot/handlers/user/: __init__.py  base.py  menu.py  register.py
bot/kb/: admin.py  user.py
bot/states/: admin.py  user.py
migrations/: env.py
migrations/versions/: 118ab04f6945_initial.py  156a25f6156b_addded_message_log_models.py  208d7e22c0f1_added_link_from_user_to_town.py  23da0ac8137d_as.py  38d074bd6826_as.py  43fd5a959fed_вкdrop_useless_fields.py  5142a75a0e01_a.py  5cf3a1cab525_1.py  5f529c1659b2_added_category.py  6fa0b3dd68d1_add_rating_to_town_list.py  8586ab9e4b7e_asd.py
