[tool.poetry]
name = "sumka"
version = "0.1.0"
description = ""
authors = ["Molfar <vladuslav09@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.19"
alembic = "^1.7.7"
PyYAML = "^6.0"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
